1998-08-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (SWARMHOME): Default to 1998-08-17.
	Include Makefile.appl from $(SWARMHOME)/etc/swarm.

1998-04-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MousetrapObserverSwarm.m: Include space.h.

	* MousetrapObserverSwarm.h: Include space.h.
	(MousetrapObserverSwarm): Make triggerGraph an object conforming
	to the EZGraph protcol, and mousetrapDisplay an object
	conforming to the Object2dDisplay protocol.

	* MousetrapModelSwarm.h: Include objectbase/Swarm.h.  Don't
	include objectbase.h.  Don't include activity.h and collections.h.
	(MousetrapModelSwarm): Make grid an object that conforms to the
	Grid2d protocol.

	* Mousetrap.h: Include objectbase/SwarmObject.h instead of
	objectbase.h.  Reformatting throughout.

1998-02-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* main.m: Include simtoolsgui.h instead of simtools.h.

	* MousetrapObserverSwarm.m: Don't include collections.h or
	objectbase.h.  Include simtoolsgui.h.

	* MousetrapObserverSwarm.h: Don't include objectbase.h, space.h,
	activity.h, collections.h, or simtools.h.  Include
	simtoolsgui/GUISwarm.h.

	* MousetrapModelSwarm.m: Include simtoolsgui.h.

1998-02-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MousetrapModelSwarm.h: Include from objectbase/ instead of
	swarmobject/.  Include objectbase.h instead of swarmobject.h.

	* Mousetrap.h, MousetrapBatchSwarm.h, MousetrapObserverSwarm.[hm]:
	Include objectbase.h instead of swarmobject.h.

1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* main.m (main): Constify argv.

	* MousetrapObserverSwarm.m ([MousetrapObserverSwarm
	-buildObjects]): Use Colormap not XColormap for colormap.  Revert
	GUI_ButtonRight change.

1998-01-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MousetrapObserverSwarm.m:  Include gui.h.
	([MousetrapObserverSwarm -buildObjects]): Send waitForControlEvent
	to actionCache. Use GUI_ButtonRight instead of ButtonRight.
