@@ -1,7 +1,15 @@
+1998-08-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* MousetrapBatchSwarm.m ([MousetrapBatchSwarm -buildObjects]): 
+	Derive load paths from getAppConfigPath.
+
+	* Makefile (APPLIBS): Remove.
+	(SWARMHOME): Default to 1998-08-19.
+	(DATAFILES): Set to {model,batch}.setup.
+
 1998-08-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
-	* Makefile (SWARMHOME): Default to 1998-08-17.
-	Include Makefile.appl from $(SWARMHOME)/etc/swarm.
+	* Makefile: Include Makefile.appl from $(SWARMHOME)/etc/swarm.
 
 1998-04-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
